# master_thesis

./: .flake8  .gitattributes  .gitignore  README.md  mypy.ini  noxfile.py  poetry.toml  pyproject.toml
.github/workflows/: release.yml  tests.yml
config/: default.yml  fingerprints.yml  noise.yml  oned.yml  raw.yml  test.yml  twod.yml
data/: UHF_TE4_nV.csv
jupyter_notebooks/: feature_models_val_scores.ipynb
src/jc_thesis_code/: calc_test_scores.py  classifiers.py  data.py  illustrate_dtw.py  print_feature_extraction_times.py  show_test_scores.py  tsfresh_features.py  visualize_fingerprints.py  visualize_grid.py
src/thesis/: calc_test_scores.py  check_pd_data.py  classifiers.py  classify.py  constants.py  convert.py  data.py  fingerprint.py  grid_search.py  gui.py  measure_info.py  measurement.py  metrics.py  models.py  plot_stratified_kfold.py  predict.py  prepared_data.py  show_test_scores.py  sklearn_metrics.py  tsfresh_features.py  util.py  visualize.py  visualize_fingerprints.py  visualize_grid.py  visualize_pd_data.py  visualize_results.py
src/thesis/model_files/: finger_preprocessor.p  model.p  preprocessor.p
testdata/: (+DC)_Partikel.csv  (+DC)_Partikel_Isolator.csv  measurement_sample.mat  small_measurement_excerpt.csv
testdata/large/: (+DC)_Partikel_large.csv
testdata/small/: (+DC) Spitze an Erde_FOO.csv  (+DC) Spitze an HS_FOO.csv  (+DC)_Partikel.csv  (+DC)_Partikel_Isolator.csv  (-DC)_Stütze.csv  (-DC)_freies Potential_FOO_BAR_BAZ.csv  create_copies.py  tsfresh_extracted_features.data
testdata/small_visualize/: (+DC) Spitze an HS_FOO.csv  (-DC)_freies Potential_FOO_BAR_BAZ.csv
tests/: conftest.py  test_calc_test_scores.py  test_check_pd_data.py  test_classifiers.py  test_classify.py  test_convert.py  test_data.py  test_fingerprint.py  test_grid_search.py  test_illustrate_dtw.py  test_measure_info.py  test_measurement.py  test_metrics.py  test_models.py  test_predict.py  test_prepared_data.py  test_tsfresh_features.py  test_tslearn.py  test_util.py  test_visualize.py  test_visualize_fingerprints.py  test_visualize_pd_data.py  test_visualize_results.py
util/: install_server.sh
