[tool.poetry]
name = "thesis"
version = "1.3.0"
description = ""
authors = ["Joris Clement <j.clement@campus.tu-berlin.de>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.2"
click = "^7.1.2"
scipy = "^1.5.2"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"
tslearn = "^0.5"
scikit-learn = "^0.24.1"
numpy = "^1.19.4"
tsfresh = "^0.18.0"
Keras = "^2.4.3"
tensorflow = "^2.4.0"
lightgbm = "^3.1.1"
pyts = "^0.11.0"
imbalanced-learn = "^0.8.0"
dtaidistance = "^2.2.5"

[tool.poetry.dev-dependencies]
pytest = "^6.1.0"
coverage = "^5.3"
pytest-cov = "^2.10.1"
mat4py = "^0.4.3"
mypy = "^0.812"
flake8 = "^3.8.4"
flake8-import-order = "^0.18.1"
black = "^20.8b1"
flake8-black = "^0.2.1"
pytest-xdist = "^2.1.0"
statsmodels = "^0.12.2"

[tool.poetry.scripts]
calc-test-scores = "thesis.calc_test_scores:click_command"
check-pd-data = "thesis.check_pd_data:main"
classify = "thesis.classify:main"
grid-search = "thesis.grid_search:main"
gui = "thesis.gui:main"
mat2csv = "thesis.convert:mat2csv"
tsfresh-features = "thesis.tsfresh_features:main"
show-test-scores = "thesis.show_test_scores:click_command"
visualize-fingerprints = "thesis.visualize_fingerprints:main"
visualize-grid = "thesis.visualize_grid:main"
visualize-pd-data = "thesis.visualize_pd_data:main"
visualize-results = "thesis.visualize_results:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["thesis"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
