[tool.poetry]
authors = ["Joris Clement <j.clement@campus.tu-berlin.de>"]
description = "Code to Master's Thesis at TU Berlin."
license = "MIT"
name = "thesis"
version = "1.7.0"

[tool.poetry.dependencies]
click = "^7.1.2"
dtaidistance = "^2.2.5"
imbalanced-learn = "^0.8.0"
lightgbm = "^3.1.1"
matplotlib = "^3.3.2"
numpy = "^1.19.4"
pandas = "^1.1.2"
python = "^3.8"
pyts = "^0.11.0"
scikit-learn = "^0.24.2"
scipy = "^1.5.2"
seaborn = "^0.11.0"
shap = "^0.39.0"
sktime = "^0.6.1"
tensorflow = "2.4.2"
tsfresh = "^0.18.0"
tslearn = "^0.5"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
coverage = "^5.3"
flake8 = "^3.9.2"
flake8-black = "^0.2.3"
flake8-import-order = "^0.18.1"
jupyterlab = "^3.0.16"
mat4py = "^0.4.3"
mypy = "^0.910"
pytest = "^6.1.0"
pytest-cov = "^2.10.1"
pytest-xdist = "^2.1.0"
statsmodels = "^0.12.2"

[tool.poetry.scripts]
calc-test-scores = "thesis.calc_test_scores:click_command"
check-pd-data = "thesis.check_pd_data:main"
classify = "thesis.classify:main"
grid-search = "thesis.grid_search:main"
gui = "thesis.gui:main"
illu-dtw = "thesis.illustrate_dtw:main"
mat2csv = "thesis.convert:mat2csv"
plot-stratified-kfold = "thesis.plot_stratified_kfold:main"
print-feature-extract-times = "thesis.print_feature_extraction_times:click_command"
show-test-scores = "thesis.show_test_scores:click_command"
tsfresh-features = "thesis.tsfresh_features:main"
visualize-fingerprints = "thesis.visualize_fingerprints:main"
visualize-grid = "thesis.visualize_grid:main"
visualize-pd-data = "thesis.visualize_pd_data:main"
visualize-results = "thesis.visualize_results:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["thesis"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
